src/objects/Licensure__c.object
<CustomObject>
    <fields>
        <fullName>Alt_Employer__c</fullName>
        <label>Alt Employer</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. SEIU-UHW Leader Producing</fullName>
                </value>
                <value>
                    <fullName>2. SEIU-UHW Supporter</fullName>
                </value>
                <value>
                    <fullName>3. Undecided</fullName>
                </value>
                <value>
                    <fullName>4. Anti-Union</fullName>
                </value>
                <value>
                    <fullName>5. NUHW Supporter</fullName>
                </value>
                <value>
                    <fullName>6. Management Leader or Activist</fullName>
                </value>
                <value>
                    <fullName>7. NUHW leader or Activist</fullName>
                </value>
                <value>
                    <fullName>9. Reported to be NLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Phone__c</fullName>
        <label>Bad Phone #</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone 1</fullName>
                </value>
                <value>
                    <fullName>Phone Contact Home</fullName>
                </value>
                <value>
                    <fullName>Phone Contact Mobile</fullName>
                </value>
                <value>
                    <fullName>Phone 2</fullName>
                </value>
                <value>
                    <fullName>Phone 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should we call this person back because they were unavailable at the time of original call?</description>
        <label>Call Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DWID__c</fullName>
        <label>DWID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licensure (Employer 2)</relationshipLabel>
        <relationshipName>Licensure1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>if(isblank( Employer__c), 
  if(isblank(Alt_Employer__c), 
    if(isblank( Related_Contact_1__c), 
      if(isblank( Related_Contact_2__c), &quot;Unknown&quot;, Related_Contact_2__r.Account.Name),
    Related_Contact_1__r.Account.Name),
  Alt_Employer__c), 
Employer__r.Name)</formula>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licensure</relationshipLabel>
        <relationshipName>Licensure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Encoded_Nearby_Hosp_05__c</fullName>
        <description>Hospitals within 0 to 5 miles.  Format is semi-colon separated OSHPD_ID.  See http://www.oshpd.ca.gov/HID/Products/Listings.html</description>
        <label>Encoded Nearby Hosp 05</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encoded_Nearby_Hosp_10__c</fullName>
        <description>Hospitals within 5 to 10 miles.  Format is semi-colon separated OSHPD_ID.  See http://www.oshpd.ca.gov/HID/Products/Listings.html</description>
        <label>Encoded Nearby Hosp 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encoded_Nearby_Hosp_15__c</fullName>
        <description>Hospitals within 10 to 15 miles.  Format is semi-colon separated OSHPD_ID.  See http://www.oshpd.ca.gov/HID/Products/Listings.html</description>
        <label>Encoded Nearby Hosp 15</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>if(isblank(Middle_Name__c), First_Name__c &amp; &quot; &quot; &amp; Last_Name__c,  First_Name__c &amp; &quot; &quot; &amp; Middle_Name__c &amp; &quot; &quot; &amp; Last_Name__c)</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Interest_in_Co_Op__c</fullName>
        <label>Interest in Co-Op</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interested/Ready to apply</fullName>
                </value>
                <value>
                    <fullName>Unsure/wants more information</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Eligible (no longer an LVN)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>96</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Addr_City__c</fullName>
        <label>License Addr City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Addr_County__c</fullName>
        <description>CA County</description>
        <label>License Addr County</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Addr_State__c</fullName>
        <label>License Addr State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Addr_Street__c</fullName>
        <label>License Addr Street</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Addr_Zip__c</fullName>
        <label>License Addr Zip</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Agency__c</fullName>
        <label>License Agency</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Id__c</fullName>
        <description>Unique Id for License</description>
        <externalId>true</externalId>
        <label>License Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Issue_Date__c</fullName>
        <label>License Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>96</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensure_Notes__c</fullName>
        <description>Notes on Licensure contacts.</description>
        <label>Licensure Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Addr_City__c</fullName>
        <label>Mailing Addr City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Addr_State__c</fullName>
        <label>Mailing Addr State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Addr_Street__c</fullName>
        <label>Mailing Addr Street</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Addr_Zip__c</fullName>
        <label>Mailing Addr Zip</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearby_Hospitals__c</fullName>
        <description>Nearby Hospitals within 20 miles or max 12 listings</description>
        <label>Nearby Hospitals</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Party_Affiliation__c</fullName>
        <label>Party Affiliation</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Contact_Home__c</fullName>
        <formula>if(isblank(Related_Contact_1__r.HomePhone), Related_Contact_2__r.HomePhone, Related_Contact_1__r.HomePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Contact Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Contact_Mobile__c</fullName>
        <formula>if(isblank(Related_Contact_1__r.MobilePhone), Related_Contact_2__r.MobilePhone, Related_Contact_1__r.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Race or Ethnicity</description>
        <label>Race</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regr_Addr_City__c</fullName>
        <label>Regr Addr City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regr_Addr_State__c</fullName>
        <label>Regr Addr State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regr_Addr_Street__c</fullName>
        <description>Voter Registration Street</description>
        <label>Regr Addr Street</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regr_Addr_Zip__c</fullName>
        <label>Regr Addr Zip</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licensure</relationshipLabel>
        <relationshipName>Licensure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licensure (Contact)</relationshipLabel>
        <relationshipName>Licensure1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact_How_1__c</fullName>
        <description>How is Contact 1 related to this licensee?</description>
        <label>Related Contact How 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Person</fullName>
                </value>
                <value>
                    <fullName>Cohabitator</fullName>
                </value>
                <value>
                    <fullName>Family/Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Contact_How_2__c</fullName>
        <description>How is Contact 2 related to the licensee?</description>
        <label>Related Contact How 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Person</fullName>
                </value>
                <value>
                    <fullName>Cohabitator</fullName>
                </value>
                <value>
                    <fullName>Family/Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Tags__c</fullName>
        <label>Report Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish_Level__c</fullName>
        <description>At what level does the person speak Spanish?</description>
        <label>Spanish Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversational</fullName>
                </value>
                <value>
                    <fullName>Fluent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Licensure</label>
    <listViews>
        <fullName>Active_LVNs</fullName>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone_1__c</columns>
        <columns>Phone_Contact_Home__c</columns>
        <columns>Phone_Contact_Mobile__c</columns>
        <columns>Bad_Phone__c</columns>
        <columns>Interest_in_Co_Op__c</columns>
        <columns>Spanish_Level__c</columns>
        <columns>Employer__c</columns>
        <columns>Alt_Employer__c</columns>
        <columns>Email__c</columns>
        <columns>Licensure_Notes__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>License_Addr_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License_Type__c</field>
            <operation>equals</operation>
            <value>Licensed Vocational Nurse</value>
        </filters>
        <filters>
            <field>Report_Tags__c</field>
            <operation>equals</operation>
            <value>LVN South LA List 4.1.16</value>
        </filters>
        <label>Active LVNs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>License_Addr_Zip__c</columns>
        <columns>License_Addr_City__c</columns>
        <columns>Phone_1__c</columns>
        <columns>Phone_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LVNs</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Regr_Addr_City__c</columns>
        <columns>Employer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License_Type__c</field>
            <operation>equals</operation>
            <value>Licensed Vocational Nurse</value>
        </filters>
        <label>LVNs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LVNs_License_Issue_5_10_yrs_ago</fullName>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone_1__c</columns>
        <columns>Phone_Contact_Home__c</columns>
        <columns>Phone_Contact_Mobile__c</columns>
        <columns>Bad_Phone__c</columns>
        <columns>Interest_in_Co_Op__c</columns>
        <columns>Spanish_Level__c</columns>
        <columns>Employer__c</columns>
        <columns>Alt_Employer__c</columns>
        <columns>Email__c</columns>
        <columns>Licensure_Notes__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>License_Addr_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License_Type__c</field>
            <operation>equals</operation>
            <value>Licensed Vocational Nurse</value>
        </filters>
        <filters>
            <field>Report_Tags__c</field>
            <operation>equals</operation>
            <value>LVN 5-10 Yrs List</value>
        </filters>
        <label>LVNs License Issue 5-10 yrs ago</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LVNs_License_List5_19_16</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Call_Back__c</columns>
        <columns>Phone_1__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Phone_Contact_Home__c</columns>
        <columns>Phone_Contact_Mobile__c</columns>
        <columns>Bad_Phone__c</columns>
        <columns>Interest_in_Co_Op__c</columns>
        <columns>Spanish_Level__c</columns>
        <columns>Employer__c</columns>
        <columns>Alt_Employer__c</columns>
        <columns>Email__c</columns>
        <columns>Licensure_Notes__c</columns>
        <columns>License_Addr_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License_Type__c</field>
            <operation>equals</operation>
            <value>Licensed Vocational Nurse</value>
        </filters>
        <filters>
            <field>Report_Tags__c</field>
            <operation>equals</operation>
            <value>LVN PB 5.19.16</value>
        </filters>
        <label>LVNs License List5.19.16</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Licensure_UHW_Members</fullName>
        <columns>NAME</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>License_Addr_City__c</columns>
        <columns>License_Addr_Zip__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Contact_1__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>UHW Members</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LIC-{000000000}</displayFormat>
        <label>Licensure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licensure</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>